src/test/06-Errors/error-super-outside-class.txt
error-super-outside-class.ck:3:1: error: keyword 'super' cannot used outside class definition
[3] super.foo();
    ^
